--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <a href="https://www.facebook.com/Razu7677" target="_blank">Facebook</a>
         </li>
         <li>
-          <a href="https://instagram.com/Razu7677" target="_blank">Instagram</a>
+          <a href="https://instagram.com/heartrajr" target="_blank">Instagram</a>
         </li>
         <li>
           <a href="https://www.youtube.com/@Rajurajbd./featured" target="_blank"
@@ -26,8 +26,8 @@
           >
         </li>
         <li>
-          <a href="https://www.linkedin.com/in/" target="_blank"
-            >LinkedIn</a
+          <a href="rajurajbd.blogpost.com" target="_blank"
+            >Website</a
           >
         </li>
         <li>
