--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           >
         </li>
         <li>
-          <a href="rajurajbd.blogpost.com" target="_blank"
+          <a href="https://rajurajbd.blogspot.com/" target="_blank"
             >Website</a
           >
         </li>
