--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   <body>
     <main class="container">
       <img class="avatar" width="128" height="128" src="./images/avatar.jpg" alt="Alomgir Hossen" />
-      <h1>Alomgir Hossen</h1>
+      <h1>Alomgir Hossen (Raj) </h1>
       <p class="bio">
-        Proprietor, Razu Computer 💻, Koyra-Khulna 
+        Social Media; Technical Suport; Gym Beginner
+        Proprietor: Razu Computer 💻, Koyra, Khulna. 
       </p>
       <ul class="social-links"> 
         <li>
