--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <img class="avatar" width="128" height="128" src="./images/avatar.jpg" alt="Alomgir Hossen" />
       <h1>Alomgir Hossen (Raj) </h1>
       <p class="bio">
-        Social Media; Technical Suport; Gym Beginner
-        Proprietor: Razu Computer 💻, Koyra, Khulna. 
+        Social Media; Technical Support; Gym Beginner
+        / Proprietor: Razu Computer 💻, Koyra, Khulna. 
       </p>
       <ul class="social-links"> 
         <li>
